kubernetes/services/obsidiansync/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: obsidian-nginx
  namespace: services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: obsidian-nginx
  template:
    metadata:
      labels:
        app: obsidian-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-config
          configMap:
            name: obsidian-nginx-config
