kubernetes/services/obsidiansync/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: obsidian-nginx
  namespace: services
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: obsidian-nginx
