kubernetes/services/obsidiansync/route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: obsidian
  namespace: services
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`obsidian.tuntelder.com`)
      kind: Rule
      services:
        - name: obsidian-nginx
          port: 80
      middlewares:
        - name: fail2ban
          namespace: network

  tls:
    certResolver: letsencrypt
